--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Astronomía - Inicio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ProyectoAstronomia</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -24,11 +24,31 @@
 </header>
 
 <section class="hero">
+  <section class="planetas-home">
+  <h2>Explora los Planetas</h2><br>
+  <div class="planetas-grid">
+    <div class="planeta"><img src="images/mercurio.png"><p>Mercurio</p></div>
+    <div class="planeta"><img src="images/venus.png"><p>Venus</p></div>
+    <div class="planeta"><img src="images/tierra.png"><p>Tierra</p></div>
+    <div class="planeta"><img src="images/marte.png"><p>Marte</p></div>
+    <div class="planeta"><img src="images/urano.png"><p>Urano</p></div>
+    <div class="planeta"><img src="images/saturno.png"><p>Saturno</p></div>
+    <div class="planeta"><img src="images/neptuno.png"><p>Neptuno</p></div>
+     <div class="planeta"><img src="images/jupiter.png"><p>Júpiter</p></div>
+  </div>
+</section>
   <h1>Astronomía</h1>
-  <p>Explora el universo, los planetas y los misterios del cosmos.</p>
+  <p><em>“El universo siempre ha despertado nuestra curiosidad. Desde los planetas que orbitan nuestro Sol hasta las galaxias que se extienden más allá de nuestra vista,
+     cada rincón del cosmos guarda una historia por descubrir. Explora aquí los mundos del Sistema Solar, la evolución de la astronomía y los misterios que aún siguen
+     desafiando a la ciencia.”</em></p>
 </section>
 
 <script src="script.js"></script>
+<footer class="footer">
+    <p class="creditos">© 2025 Astronomía — Joel Herrera</p>
+    <p class="disclaimer">
+        Este sitio es un proyecto académico de curso. Las imágenes y utilizados pertenecen a sus respectivos autores y su respectivos derechos</p>
+</footer>
 </body>
 </html>
 
