--- a/planetas.html
+++ b/planetas.html
@@ -30,54 +30,54 @@
   </p>
 </section>
 
-<!-- SECCIÓN 1 — TARJETAS DE PLANETAS -->
+<!--Espacios cuadros de los planetas-->
 <section class="grid-planetas">
   <div class="card-planeta">
     <img src="images/mercurio.png" alt="Mercurio">
     <h3>Mercurio</h3>
-    <p>El más cercano al Sol y el más pequeño. Días extremadamente largos.</p>
+    <p>El más cercano al Sol y el más pequeño. Días extremadamente largos</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/venus.png" alt="Venus">
     <h3>Venus</h3>
-    <p>El planeta más caliente, cubierto por densas nubes tóxicas.</p>
+    <p>El planeta más caliente, cubierto por densas nubes tóxicas</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/tierra.png" alt="Tierra">
     <h3>Tierra</h3>
-    <p>El único hogar conocido de la vida. 71% cubierto por agua.</p>
+    <p>El único hogar conocido de la vida. 71% cubierto por agua</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/marte.png" alt="Marte">
     <h3>Marte</h3>
-    <p>El planeta rojo. Candidato para futuras colonizaciones.</p>
+    <p>El planeta rojo. Candidato para futuras colonizaciones</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/jupiter.png" alt="Júpiter">
     <h3>Júpiter</h3>
-    <p>El gigante gaseoso, con la Gran Mancha Roja en constante tormenta.</p>
+    <p>El gigante gaseoso, con la Gran Mancha Roja en constante tormenta</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/saturno2.png" alt="Saturno">
     <h3>Saturno</h3>
-    <p>Famoso por sus majestuosos anillos compuestos de hielo y roca.</p>
+    <p>Famoso por sus majestuosos anillos compuestos de hielo y roca</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/urano.png" alt="Urano">
     <h3>Urano</h3>
-    <p>Gira prácticamente acostado. Un gigante de hielo.</p>
+    <p>Gira prácticamente acostado. Un gigante de hielo</p>
   </div>
 
   <div class="card-planeta">
     <img src="images/neptuno.png" alt="Neptuno">
     <h3>Neptuno</h3>
-    <p>El más lejano del Sol y con los vientos más rápidos conocidos.</p>
+    <p>El más lejano del Sol y con los vientos más rápidos conocidos</p>
   </div>
 </section>
 
